rendered canvases: fix aspect ratio distortion

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html {
 /* https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 :root {
   /* colors */
+  --almost-black: #080808;
   --bright-green: #bff5aa;
   --bright-teal: #3ddaf6;
   --dark-teal: #2b88ac;
@@ -479,27 +480,32 @@ input:checked {
 }
 
 /* http://stackoverflow.com/questions/7615009/disable-interpolation-when-scaling-a-canvas */
+div#main-image-canvas-container {
+  width: 50vw;
+  margin: 0;
+  background-color: var(--almost-black);
+  border: 3px solid white;
+}
+
+div#preview-image-canvas-container {
+  height: 30vh;
+  width: 100%;
+  margin: 0;
+  background-color: var(--almost-black);
+  border: 2px solid white;
+}
+
 canvas {
-  /* image-rendering: optimize-contrast !important;
-  -ms-interpolation-mode: nearest-neighbor !important;
-  image-rendering: crisp-edges !important;
-  image-rendering: -moz-crisp-edges !important;
-  image-rendering: optimizeSpeed !important;
-  image-rendering: pixelated; */
-  image-rendering: auto;
-  /* image-rendering: pixelated;
-  image-rendering: -webkit-optimize-contrast; */
   background-color: black;
-  width: auto;
   height: 100%;
+  width: auto;
   max-height: 76vh;
 }
 
-canvas.image-layer-preview {
-  height: 30vh;
-  width: 100%;
+canvas#image-layer-preview {
   background-color: black;
-  border: 2px solid white;
+  height: 100%;
+  width: auto;
 }
 
 canvas.image-about-telescope {
